--- a/package.json
+++ b/package.json
@@ -15,22 +15,13 @@
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^2.0.0",
     "gulp-clean-css": "^4.0.0",
     "gulp-imagemin": "^5.0.3",
-    "gulp-uglify": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "imagemin-optipng": "^6.0.0",
-    "imagemin-svgo": "^7.0.0",
-    "imagemin-webpack": "^4.0.1",
-    "imagemin-webpack-plugin": "^2.4.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
-    "resolve-url-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.3",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-cli": "^3.2.1"
   }
 }
